;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.7 relative to sbcl-1.0.6:
  * enhancement: name of a socket-stream is now "a socket" instead of
    "a constant string".
  * bug fix: the cache used by the CLOS to store precomputed effective
    methods, slot offsets, and constant return values is now thread and
    interrupt safe.

changes in sbcl-1.0.6 relative to sbcl-1.0.5:
  * new contrib: sb-cover, an experimental code coverage tool, is included
    as a contrib module.
  * optimization: STRING-TO-OCTETS for unibyte encodings and UTF-8 is
    significantly faster.
  * optimization: calls of the form (AREF FOO (+ INDEX <constant>)) now
    produce more efficient code on x86-64 if the compiler can determine
    that (+ INDEX <constant>) does not require a bounds check and FOO
    has an element type at least 8 bits wide.
  * enhancement: a new, experimental synchronous timeout facility is
    provided. Refer to SB-SYS:WITH-DEADLINE for details.
  * enhancement: when a symbol name conflict error arises, the
    conflicting symbols are always printed with a package prefix.
    (thanks to Kevin Reid)
  * enhancement: stepping is now once again supported on the SPARC and
    MIPS platforms.  (It is also now more likely to work on CheneyGC
    builds on the PPC.)
  * enhancement: sb-sprof can now also track and report accurate call
    counts.
  * bug fixes: the treatment of non-standard subclasses of
    SB-MOP:SPECIALIZER is more correct.
  * incompatible change: PURIFY no longer copies the data from the 
    dynamic space into the static and read-only spaces on platforms
    that use the generational garbage collector
  * bug fix: GETHASH, (SETF GETHASH), CLRHASH and REMHASH are now
    interrupt safe.
  * bug fix: GC race condition occasionally resulting in crashes with
    the error message "SIG_STOP_FOR_GC blocked at a bad place" has been
    fixed.
  * bug fix: &ENVIRONMENT variables in macro lambda lists can now be
    declared ignored.