@@ -1,10 +1,16 @@
 ;;;; -*- coding: utf-8; -*-
 changes in sbcl-1.0.7 relative to sbcl-1.0.6:
+  * minor incompatible change: the (unsupported) spinlock interface
+    has changed: free spinlock now has the value NIL, and a held spinlock
+    has the owning thread as its value.
   * enhancement: name of a socket-stream is now "a socket" instead of
     "a constant string".
   * bug fix: the cache used by the CLOS to store precomputed effective
     methods, slot offsets, and constant return values is now thread and
     interrupt safe.
+  * bug fix: generic function dispatch function updating is now thread
+    and interrupt safe (in the sense that the known issues have been
+    fixed).
 
 changes in sbcl-1.0.6 relative to sbcl-1.0.5:
   * new contrib: sb-cover, an experimental code coverage tool, is included
